css/main.css
/* ... */
html {
    font-size: 15px;
    font-size: calc( 15px + 10 * ( ( 100vw - 375px ) / 825 ));
}

@media screen and (max-width: 375px) {
    html { font-size: 15px; }
}

@media screen and (min-width: 1200px) {
    html { font-size: 25px; }
}

/*
 * Remove text-shadow in selection highlight:
 * https://twitter.com/miketaylr/status/12228805301
 *
 * Vendor-prefixed and regular ::selection selectors cannot be combined:
 * https://stackoverflow.com/a/16982510/7133471
 *
 * Customize the background color to match your design.
 */

::selection {
    background: #b3d4fc;
    text-shadow: none;
}

/*
 * A better looking default horizontal rule
 */

hr {
    display: block;
    height: 1px;
    border: 0;
    border-top: 1px solid #881630;
    margin: 1em 0;
    padding: 0;
}

/*
 * Remove the gap between audio, canvas, iframes,
 * images, videos and the bottom of their containers:
 * https://github.com/h5bp/html5-boilerplate/issues/440
 */

audio,
canvas,
iframe,
img,
svg,
video {
    vertical-align: middle;
}

/*
 * Remove default fieldset styles.
 */

fieldset {
    border: 0;
    margin: 0;
    padding: 0;
}

/*
 * Allow only vertical resizing of textareas.
 */

textarea {
    resize: vertical;
}

/* ==========================================================================
   Browser Upgrade Prompt
   ========================================================================== */
html.flexbox .browserupgrade {
    display: none;
}

.browserupgrade {
    margin: 0.2em 0;
    background: white;
    color: #000;
    padding: 0.2em 0;
}



/* ==========================================================================
  Layout
  ========================================================================== */

.container {
    max-width: 35rem;
    padding: 0 1rem;
    margin: 0 auto;
}

section, footer {
    padding: 3.6rem 0 3.6rem;
}

.section-footer {
    background-color: #881630;
    color: white;
    padding: 2.2rem 0 3.6rem;
}

.section-coming {
    color: black;
    background-color: #f2f2f4;
    padding: 4rem 0 2rem;
}
.section-header {
    background-color: #b31437;
    color: white;
}


/* ==========================================================================
  Custom styles
  ========================================================================== */
h1, h2, h3, h4 {
    font-family: "Montserrat",sans-serif;
    margin: 0 0 .5em;
    line-height: 1.1;
    letter-spacing: -0.015em;
}

.section-coming h1 {
    margin-bottom: 2.6rem;
}

a.btn {
    cursor: pointer;
    font-family: "Montserrat",sans-serif;
    display: inline-block;
    background-color: #881630;
    border-radius: 6px;
    padding: .5em 1.3em;
    text-transform: uppercase;
    font-weight: 700;
    text-decoration: none;
    color: white;
    font-size: .8rem;
    transition: background-color ease-in .1s;
}

a.btn:hover, a.btn:active {
    background-color: #b31437;
}

a.btn--approve {
  background-color: #14b969;
}
a.btn--approve:hover, a.btn--approve:active {
  background-color: #007d41;
}


.section-header .btn {
    background-color: white;
    color:#881630;
}

.section-header a.btn:hover, .section-header a.btn:active {
    background-color: white;
    color: #b31437;
}

.header-intro,
.page-title {
    margin: 0 0 3.6rem;
}

.icon path {
    fill: #b31437;
}

.section-header .icon path {
    fill: #fff;
}

.icon {
    height: 1rem;
    width: 1rem;
    vertical-align: middle;
    margin-right: .2em;
    margin-bottom: .1em;
}

.event {
    margin-bottom: 1.4rem;
}

.event + .event {
    margin-top: 2.8rem;
}

.event__text {
    margin: 0 auto 1.9em;
    font-size: 1rem;
    line-height: 1.25;
    max-width: 35em;
}
@media screen and (min-width: 768px) {
    .event__text {
        font-size: .8rem;
    }
}


.event__time,
.event__location {
    font-weight: normal;
    margin: 0;
}

.event__time {
    margin-bottom: 1em;
}

.coming__footer_text {
    margin-top: 2.8rem;
    margin-bottom: 1.4rem;
}

.countdown.flip-clock-wrapper {
    margin: -0.3rem auto 2.4rem;
    display: inline-block;
    width: auto;
    font-size: 1.6vw;
}

@media screen and (min-width: 1440px) {
    .countdown.flip-clock-wrapper { font-size: 1rem; }
}

.footer__links a {
    font-family: "Montserrat",sans-serif;
    color: #fff;
    text-decoration: none;
    font-weight: 700;
    font-size: .8em;
}

.footer__logo {
    margin-bottom: 1rem;
    max-width: 50%;
}

.cookie-banner {
  background-color: #881630;
  color: #fff;
  width: 100%;
  bottom: 0;
  position: fixed;
}

.cookie-banner__inner {
  padding: 1em;
}

 /* ==========================================================================
   Flip clock
   ========================================================================== */
/* Get the bourbon mixin from http://bourbon.io */
/* Reset */
.flip-clock-wrapper * {
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    -ms-box-sizing: border-box;
    -o-box-sizing: border-box;
    box-sizing: border-box;
    -webkit-backface-visibility: hidden;
    -moz-backface-visibility: hidden;
    -ms-backface-visibility: hidden;
    -o-backface-visibility: hidden;
    backface-visibility: hidden;
}

.flip-clock-wrapper a {
    cursor: pointer;
    text-decoration: none;
    color: #881630; }

.flip-clock-wrapper a:hover {
    color: #fff; }

.flip-clock-wrapper ul {
    list-style: none; }

.flip-clock-wrapper.clearfix:before,
.flip-clock-wrapper.clearfix:after {
    content: " ";
    display: table; }

.flip-clock-wrapper.clearfix:after {
    clear: both; }

.flip-clock-wrapper.clearfix {
    *zoom: 1; }

/* Main */
.flip-clock-wrapper {
    font-family: "Montserrat",sans-serif;
    -webkit-user-select: none; }

.flip-clock-meridium {
    background: none !important;
    font-size: 36px !important; }

.flip-clock-meridium a { color: #313333; }

.flip-clock-wrapper {
    text-align: center;
    position: relative;
    width: 100%;
    margin: 1em;
}
/* ... */

